assets/css/style.css
:root {
    --background: rgba(0, 0, 0, 0.95);
}

*, *::before, *::after {
    box-sizing: border-box;
}

.wrapper {
    display: flex;
    flex-flow: row wrap;
    text-align: center;
}

.wrapper>* {
    flex: 1 100%;


}
.main {
    /* display: grid;
    grid-template-rows: auto;
    grid-template-columns: 25% auto; */
    text-align: center;
    background: deeppink;
    height: 500px;
}

.header {
    background-color: var(--background);
    text-align: center;
    position: fixed;
    width: 100%;
    z-index: 999;
}

.header h1 {
    color: white;
}


/* Navigation Menu Styling */

.nav-toggle {
    display: none;
}

.nav-toggle-label {
    position: absolute;
    top: 0;
    left: 0;
    margin-left: 1em;
    height: 100%;
    display: flex;
    align-items: center;

}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    background: white;
    height: 2px;
    width: 2em;
    border-radius: 2px;
    position: relative;    
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
    content: '';
    position: absolute;

}

.nav-toggle-label span::before {
    bottom: 7px;
}

.nav-toggle-label span::after {
    top: 7px;
}


nav {
    position: absolute;
    text-align: left;
    top: 100%;
    left: 0;
    background: var(--background);
    width: 100%;
    transform: scale(1, 0);
    transform-origin: top;  
    transition: transform 400ms ease-in-out;
}

nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

nav li{
    margin-bottom: 1em;
    margin-left: 1em;
}

nav a {
    color: white;
    text-decoration: none;
    font-size: 1.2rem;
    text-transform: uppercase;
    opacity: 0;
    transition: opacity 150ms ease-in-out;
}

nav a:hover {
    color: darkgray;

}

.nav-toggle:checked ~ nav {
   transform: scale(1, 1);
}

.nav-toggle:checked ~ nav a {
    opacity: 1;
    transition: opacity 250ms ease-in-out 250ms;
}


/* Hero Media Styling */

.hero {
    display: flex;
    justify-content: left;
    align-items: center;
    background: rgba(0, 0, 0, 0.55);
    color: white;
    margin-bottom: 100px;
    height: 30rem;
    position: relative;
    overflow: hidden;
    min-height: 100vh;

}

.video-bg {
    position: absolute;
    z-index: -1;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    min-width: 100%;
    min-height: 100%;
    
}

.footer {
    background-color: green;
    height: 50rem;

}


@media all and (min-width: 798px) {
    
    .main {
    display: grid;
    grid-template-columns: 25% auto;
    text-align: center;
    background: deeppink;
    height: 75rem;

    }

    .header {
        all: unset;
    }

    .nav-toggle-label {
        display: none;
        
    }

    .header {
        display: grid;
        grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
    }

    .header h1 {
        color: black;
    }

    .logo {
        grid-column: 2 / 3;
        color: white;
    }

    nav {
        all: unset;
        grid-column: 3 / 4;
        display: flex;
        justify-content: flex-end;
        align-items: center;
        /* Add Edge support */
        position: relative;
        text-align: left;
        transition: none;
        transform: scale(1,1);
        background: none;
        top: initial;
        left: initial;
        /* end Edge support */
    }

    nav ul {
        display: flex;
        
    }

    nav li {
        margin-left: 3em;
        margin-bottom: 0;

    }

    nav a {
        opacity: 1;
        position: relative;
    }

    nav a::before {
        content: '';
        display: block;
        height: 5px;
        background: darkgray;
        position: absolute;
        bottom: -.75em;
        left: 0;
        right: 0;
        transform-origin: left;
        transform: scale(0, 1);
        transition: transform ease-in-out 250ms;

    }
 
    nav a:hover::before {
        transform: scale(1, 1);
    }

}

